--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1><br />
 							Data Analyst<br /> Portfolio
 							</h1>
-						<p>Aspiring Data Anallyst skilled in Excel, SQL and Power BI<a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Aspiring Data Anallyst skilled in Excel, SQL and Power BI<a href="https://html5up.net/license"> LinkedIn</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
