--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Harry Behn A. Francisco</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" /> 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -22,7 +22,7 @@
 						<h1><br />
 							Data Analyst<br /> Portfolio
 							</h1>
-						<p>Aspiring Data Anallyst skilled in Excel, SQL and Power BI<a href="https://html5up.net/license"> LinkedIn</a>.</p>
+						<p>Data Anallyst skilled in Power BI, SAS , Excel and SQL<a href="https://html5up.net/license"> LinkedIn</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -178,7 +178,7 @@
 							<section class="alt">
 								<h3>Address</h3>
 								<p>Peach St. Brgy. San Francisco<br />
-								Mabalacat City, Pampanga</p>
+								Mabalacat City, Pampanga, Philippines</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
