--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Harry Behn A. Francisco</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" /> 
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -22,7 +22,7 @@
 						<h1><br />
 							Data Analyst<br /> Portfolio
 							</h1>
-						<p>Data Anallyst skilled in Power BI, SAS , Excel and SQL<a href="https://html5up.net/license"> LinkedIn</a>.</p>
+						<p>Data Anallyst skilled in Excel, Power BI, SAS and SQL <a href="https://html5up.net/license"></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -52,13 +52,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/harrybehn/powerbiportfolio/blob/main/README.md">Power Bi Project<br />
 									</a></h2>
-									<p> This Project Showcased my skill in Data cleaning in SQL .</p>
+									<p> This Project Showcased my skill in Data cleaning, Data Transformation and Data Visualization using Power Query andPower BI. This report is used to monitor weeekly and monthly Gaming performance of a casino.</p>
+									
 								</header>
-								<a href="#" class="image main"><img src="images/pexels-binyaminmellish-106399.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Screenshot 2025-02-18 105927.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/harrybehn/powerbiportfolio/blob/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -69,41 +70,39 @@
 										<h2><a href="#">Microsoft Excel Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/cdc-k0KRNtqcjfw-unsplash.jpg" alt="" /></a>
-									<p>Data explaration using MySQL server.</p>
+									<a href="#" class="image fit"><img src="images/Excel Project.png" alt="" /></a>
+									<p>This Excel report is  created for Casino Gaming Performance yearly comparison. This report showcased my knowledge in excel including Pivot Table, Conditional Formatting and Excel Formulas.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Power BI Projects<br />
+										<h2><a href="#">Excel VBA Projects<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pexels-binyaminmellish-106399.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This VBA projects are use to automate excel data cleaning, data transformation and data extraction.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Data Exlporation in SQL<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Data Cleaning and Data Transformation in SQL</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This project showcases my skill in data cleaning and data transformation using SQL queries.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Python Projects<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Data Cleaning and Data Transformation in SAS EG</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This project showcases my skill in data cleaning and data transformation using SAS EG.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
