--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/harry-behn-francisco-cssyb-102b361bb/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/harrybehn" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							
 						</ul>
 					</nav>
